--- a/study-with-us/courses/early-childhood-v2.html
+++ b/study-with-us/courses/early-childhood-v2.html
@@ -216,7 +216,91 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
                 </tr>
             </tbody>
         </table>
-        <p>Learn more about <a href="http://education.unimelb.edu.au/study_with_us/scholarships_and_financial_support">Financial support</a></p>
+        <p class="accordion-label compact"><a href="#">How much do I need to pay?</a></p>
+        <div class="accordion-content">
+            <div class="fees-info">
+                <ul class="tabs" role="tablist">
+                    <li role="presentation">
+                        <a href="#fee-tab1" role="tab" class="current" >C'wealth Supported Place</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#fee-tab2"  role="tab">Australian Fee Place</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#fee-tab4"  role="tab">International Fee Place</a>
+                    </li>
+                </ul>
+                <div class="panes">
+                    <div id="fee-tab1" role="tabpanel" class="current">
+                        <div class="explanation">
+                            <p>A limited number of <a href="http://futurestudents.unimelb.edu.au/admissions/fees/grad-dom/commonwealth_supported_places">Commonwealth Supported Places</a> will be awarded on the basis of academic merit. A Commonwealth Supported Place is subsidised by the Australian Government.</p>
+                            <p>Commonwealth Supported Place fees are set each year. Students pay a contribution amount that is determined by the Australian Government, based on the subjects undertaken.</p>
+                        </div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>For 1 year</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>Masters - coursework</th>
+                                    <td>$23,904</td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div id="fee-tab2" role="tabpanel">
+                        <div class="explanation">
+                            <p>If you are not eligible for a Commonwealth Supported Place, you will automatically be considered for an <a href="http://futurestudents.unimelb.edu.au/admissions/fees/grad-dom/aust-fee-place-fees">Australian Fee place</a> if you are eligible for a place in the course. Students enrolled in an AF place are required to pay the full cost of their tuition fees to the University.</p>
+                        </div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>For 6 months</th>
+                                    <th>Total fees</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>Masters - coursework</th>
+                                    <td>$11,952</td>
+                                    <td>$11,952</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div id="fee-tab4" role="tabpanel">
+                        <div class="explanation">
+                            <p>The <a href="http://futurestudents.unimelb.edu.au/admissions/fees/grad-intl">International Fee Place</a> blah blah blah</p>
+                        </div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>For 6 months</th>
+                                    <th>Total fees</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>Masters - coursework</th>
+                                    <td>$11,952</td>
+                                    <td>$11,952</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <p>The fees listed above are indicative for 2018.</p>
+            <p>Learn more about <a href="http://education.unimelb.edu.au/study_with_us/scholarships_and_financial_support">Financial support</a></p>
+        </div>
+        
     </div>
     <div class="well">
         <img src="http://education.unimelb.edu.au/__data/assets/image/0005/1497218/EARLY-CHILDHOOD-Kate-HardingeMA005_cropped.jpg" alt="Photo of Kate Hardinge, Master of Teaching (Early Childhood) candidate">
