--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -188,7 +188,7 @@ pageSpecificScript: /js/card-script.js
                     </footer>
                 </a>
             </article>
-            <article class="news card">
+            <article class="external news card">
                 <a href="" rel="external">
                     <header></header>
                     <div class="card-main">
