--- a/news-and-activities/deans-lecture-series.html
+++ b/news-and-activities/deans-lecture-series.html
@@ -2,10 +2,13 @@
 #jekyll front matter
 
 layout: events
-title: Events
+title: Dean's Lecture Series
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/news-hero-image.jpg
 ---
+
+<p class="intro">The Melbourne Graduate School of Education Dean’s Lecture Series provides a platform for discussion and debate in the education community.</p>
+<p class="intro">Dean’s Lectures take place throughout the year and feature internationally renowned experts from Australia and overseas.</p>
 <div class="container nine-three">
     <div class="span9">
             <div id="container" class="col-3max ">
@@ -189,15 +192,16 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
     </div>
     <div class="span3">
         <div class="well">
-            <h2>Next Dean's Lecture</h2>
-            <p id="nextDLS">Next Dean’s Lecture will be scheduled soon</p>
+            <h2>Details</h2>
+            <p>All Dean’s Lectures are free and open to the public.</p>
+            <p>Visit <a href="http://pcs.unimelb.edu.au/services/parking/car_parks" rel="external">casual parking</a> to learn more about car park locations and charges.</p>
             
             <a class="button-go" href="http://education.unimelb.edu.au/news_and_activities/events/deans-lecture-series/dls_past">View past Dean's Lectures</a>
         </div>
         <div class="side-bar alert">
-            <h2>Subscribe to events</h2>
-            <p>Receive invitations to special events</p>
-            <div class="createsend-button" style="height:35px;display:inline-block;" data-listid="i/2E/D58/A03/3BDC17E618A285A8"></div>
+            <h2>Join our Dean's Lecture email list</h2>
+            <p>To receive invitations to upcoming lectures</p>
+            <div class="createsend-button" style="height:27px;display:inline-block;" data-listid="i/23/4BC/222/5B4D2B861BBDC17B"></div>
             <script type="text/javascript">(function () { var e = document.createElement('script'); e.type = 'text/javascript'; e.async = true; e.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://btn.createsend1.com/js/sb.min.js?v=3'; e.className = 'createsend-script'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(e, s); })();</script>
         </div>
     </div>
