--- a/news-and-activities/events.html
+++ b/news-and-activities/events.html
@@ -11,12 +11,12 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
     <dl class="filters-nav__list">
         <dt>Filter events:</dt>
         <dd><a class="filter" data-filter="all">All</a></dd>
-        <dd><a class="filter" data-filter=".conference">conference</a></dd>
-        <dd><a class="filter" data-filter=".lecture">free lectures</a></dd>
-        <dd><a class="filter" data-filter=".seminars">seminars</a></dd>
-        <dd><a class="filter" data-filter=".orientation">welcome/orientation</a></dd>
-        <dd><a class="filter" data-filter=".future">future student events</a></dd>
-        <dd><a class="filter" data-filter=".other">other</a></dd>
+        <dd><a class="filter" data-filter="conference">conference</a></dd>
+        <dd><a class="filter" data-filter="lecture">free lectures</a></dd>
+        <dd><a class="filter" data-filter="seminars">seminars</a></dd>
+        <dd><a class="filter" data-filter="orientation">welcome/orientation</a></dd>
+        <dd><a class="filter" data-filter="future">future student events</a></dd>
+        <dd><a class="filter" data-filter="other">other</a></dd>
     </dl>
 </div>
 <div class="article" id="container">
@@ -232,7 +232,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
     <div class="well">
         <h2>Subscribe to events</h2>
         <p>Receive invitations to special events</p>
-        <div class="createsend-button" style="height:35px;display:inline-block;" data-listid="i/2E/D58/A03/3BDC17E618A285A8"></div>
+        <div class="createsend-button" style="height:27px;display:inline-block;" data-listid="i/2E/D58/A03/3BDC17E618A285A8"></div>
         <script type="text/javascript">(function () { var e = document.createElement('script'); e.type = 'text/javascript'; e.async = true; e.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://btn.createsend1.com/js/sb.min.js?v=3'; e.className = 'createsend-script'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(e, s); })();</script>
     </div>
 
